# RoomCast

./: .gitignore  Makefile  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml  esp32Components.md  esp32WiringGuide.md  my.instructions.md  newFeatures.md  pat  snapserver.example.json  snapserver.json
.github/instructions/: roomcast.instructions.md
.github/workflows/: publish-controller.yml
audiobookshelf-worker/: Dockerfile  worker.py
docs/: radio-channel-plan.md
librespot/: Dockerfile  run.sh
node-agent/: Dockerfile  RASPBERRY_PI_SETUP.md  README.md  agent.py  camilladsp-config.yml  install.sh  requirements.txt  systemd-roomcast-agent.service  systemd-snapclient.service
node-agent/firstboot/: prepare-sd-linux.sh  roomcast-firstboot.service  roomcast-firstboot.sh
nodes/common/: agent_api.md
nodes/esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
nodes/esp32/main/: CMakeLists.txt  app_main.c  roomcast_config.h  roomcast_dns.c  roomcast_dns.h  roomcast_eq.c  roomcast_eq.h  roomcast_http.c  roomcast_http.h  roomcast_led.c  roomcast_led.h  roomcast_snapclient.c  roomcast_snapclient.h  roomcast_storage.c  roomcast_storage.h  roomcast_wifi.c  roomcast_wifi.h
nodes/raspberry-pi/: README.md
radio-worker/: worker.py
server/: Dockerfile  local_agent.py  main.py  requirements.txt  webrtc.py
server/api/: audiobookshelf.py  auth.py  cast.py  channels.py  health.py  nodes.py  playback.py  providers.py  radio.py  snapcast.py  sonos.py  ui.py  (+2 more)
snapserver/: Dockerfile
spotify-auth-broker/: .env  Dockerfile  README.md  app.py
(+41 files in other folders)
